@@ -42,16 +42,6 @@ class WikiPlugin_RichTable
         return array();
     }
 
-    function getWikiPageLinks($argstr, $basepage)
-    {
-        global $backlinks;
-        if (empty($backlinks)) {
-            global $request;
-            $this->run($request->_dbi, $argstr, $request, $basepage);
-        }
-        return $backlinks;
-    }
-
     /**
      * @param WikiDB $dbi
      * @param string $argstr
@@ -61,10 +51,6 @@ class WikiPlugin_RichTable
      */
     function run($dbi, $argstr, &$request, $basepage)
     {
-        global $backlinks;
-
-        $backlinks = array();
-
         include_once 'lib/BlockParser.php';
 
         $lines = preg_split('/\n/', $argstr);
